# zeichen

./: .editorconfig  .gitignore
backend/: Cargo.toml  Dockerfile-pg  docker-compose.yml  justfile
backend/migrations/: 0001_initial.down.sql  0001_initial.up.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/middleware/: mod.rs
backend/src/middleware/log/: core.rs  layer.rs
backend/src/service/: mod.rs
backend/src/service/healthcheck/: handlers.rs
backend/yaak/: yaak.ev_3Qz798eGYU.yaml  yaak.rq_8U3JF74na6.yaml  yaak.wk_RUX4eCh6Af.yaml
frontend/: biome.json  package.json
