[package]
name = "zeichen-api"
version = "0.1.0"
edition = "2024"
authors = ["Sheape <paulpare@protonmail.com>"]
description = "Backend REST API for Zeichen."
repository = "https://github.com/TheoryOfNekomata/zeichen"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = -1 }

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
chrono = { version = "0.4.43", features = ["serde"] }
chrono-tz = "0.10.4"
derive_more = { version = "2.1.1", features = ["from", "display"] }
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"
sqlx = { version = "0.8.6", features = [
  "chrono",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
strum_macros = "0.28.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
uuid = { version = "1.21.0", features = ["serde", "v7"] }
